fixing overlapping popup

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,7 @@
 }
 
 .mapboxgl-popup {
-  z-index: 9999 !important;
+  z-index: 10 !important;
 }
 
 .popup-title {
